[package]
name         = "oxidized-transport"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/transport"
homepage     = "https://github.com/oxidized-mc/transport"
rust-version = "1.85"
readme       = "README.md"
documentation = "https://docs.rs/oxidized-transport"
description  = "Minecraft protocol transport — Connection state machine, async reader/writer, framing pipeline"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-codec       = "0.1.0-dev"
oxidized-crypto      = "0.1.0-dev"
oxidized-compression = "0.1.0-dev"
bytes     = "1"
thiserror = "2"
tokio     = { version = "1", features = ["net", "io-util", "sync"] }

[dev-dependencies]
proptest = "1"
tokio    = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
